apps/rhf-mui-docs/src/app/v1/components/mui/RHFSelect/page.mdx
import { DocsPage, PropsTable, Callout } from '@/components/docs';
import { componentMetadata, componentProps } from '@/constants';

export const metadata = componentMetadata.RHFSelect;

export default function Layout({ children }) {
  return <DocsPage>{children}</DocsPage>;
}

# RHFSelect

**RHFSelect** is an extended version of [Select](https://v5.mui.com/material-ui/react-select/),
allowing users to select one or more options. One significant advantage is its
ability to _**accept both arrays and arrays of objects**_, making it easier to
render options with differing labels and values without custom logic.

## Usage

```tsx
import RHFSelect, { RHFSelectProps } from '@nish1896/rhf-mui-components/mui/select';
```

Here's a basic example with an array of strings:

```tsx
<RHFSelect
  fieldName="color"
  register={register}
  options={['Red', 'Blue', 'Orange']}
  errorMessage={errors?.color?.message}
/>
```

For options as an array of objects:

```tsx
<RHFSelect
  fieldName="country"
  register={register}
  options={[
    { code: 'AUS', country: 'Australia' },
    { code: 'IN', country: 'India' },
    { code: 'UAE', country: 'United Arab Emirates' },
  ]}
  labelKey="country"
  valueKey="code"
  errorMessage={errors?.country?.message}
/>
```

<Callout type="warning">
When using an array of objects for options, both `labelKey` and `valueKey`
are required. If either is missing, an error will be thrown.
</Callout>

## API
The `RHFSelectProps` interface extends [SelectProps](https://v5.mui.com/material-ui/api/select/)
and accepts the following additional props.
Props marked with <strong style={{ color: 'var(--mui-palette-error-main)' }}>{'*'}</strong> are required.

<PropsTable
  rows={componentProps.RHFSelect}
  docsVersion={1}
  muiVersion={5}
  v1
/>
