apps/rhf-mui-docs/src/app/v4/components/mui/RHFSelect/page.mdx
import { DocsPage, PropsTable, Callout, ComponentSourceLink } from '@/components/docs';
import { componentMetadata, componentProps } from '@/constants';

export const metadata = componentMetadata.RHFSelect;

export default function Layout({ children }) {
  return <DocsPage>{children}</DocsPage>;
}

# RHFSelect

**RHFSelect** is an extended version of [Select](https://v7.mui.com/material-ui/react-select/),
allowing users to select one or more options. One key advantage is its
ability to _**accept both arrays and arrays of objects**_, making it easier to
render options with differing labels and values without custom logic.

<Callout type="tip">
If the number of options **exceeds 20**, consider using [RHFAutocomplete](/v4/components/mui/RHFAutocomplete)
or [RHFMultiAutocomplete](/v4/components/mui/RHFMultiAutocomplete) for better searchability, improved keyboard
navigation, and overall performance.
</Callout>

## Usage

```tsx
import RHFSelect, { RHFSelectProps } from '@nish1896/rhf-mui-components/mui/select';
```

Here is a basic example with an array of strings:

```tsx
<RHFSelect
  fieldName="color"
  control={control}
  options={['Red', 'Blue', 'Orange']}
/>
```

For options as an array of objects:

```tsx
<RHFSelect
  fieldName="country"
  control={control}
  options={[
    { code: 'AUS', country: 'Australia' },
    { code: 'IN', country: 'India' },
    { code: 'UAE', country: 'United Arab Emirates' },
  ]}
  labelKey="country"
  valueKey="code"
/>
```

<Callout type="warning">
When using an array of objects for options, both `labelKey` and `valueKey`
are required. If either is missing, an error will be thrown.
</Callout>

## Examples
- [Select](https://v7.mui.com/material-ui/react-select/)

## API
The `RHFSelectProps` interface extends [SelectProps](https://v7.mui.com/material-ui/api/select/)
and accepts the following additional props.
Props marked with <strong style={{ color: 'var(--mui-palette-error-main)' }}>{'*'}</strong> are required.

<PropsTable
  rows={componentProps.RHFSelect}
  docsVersion={4}
  muiVersion={7}
  v4AndAbove
/>

## Source Code

<ComponentSourceLink
  path="mui/select"
  docsVersion={4}
/>
